--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.7",
     "chart.js": "^3.9.1",
     "cloudinary": "^1.37.0",
     "dayjs": "^1.11.7",
@@ -23,11 +24,13 @@
     "eslint-config-next": "13.4.4",
     "js-cookie": "^3.0.5",
     "next": "13.4.4",
+    "papaparse": "^5.4.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.1",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.53.2",
     "react-redux": "^8.0.5",
     "react-select": "^5.7.3",
     "react-simple-star-rating": "^5.1.7",
